# llm-indiegogo-vg

./: .gitignore  featurelist.md  readme.md
src/: .env.dist  pyproject.toml
src/common/: mlfeatures.py  project.py  rawdata.py  rawfeatures.py
src/data/: scraped.csv
src/feature/: __init__.py
src/feature/features/: __init__.py  category.py  date.py  title.py
src/llama_chat/: __init__.py  llama_cpp_chat_completion_wrapper.py  llamachat.py  tokenizer.py
src/scraper/: __init__.py
src/scripts/: combine_scraped_data.py  infer_features.py  scrape_data.py  test.py
