[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["ugnlin <eugene.lin253@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
fake-useragent = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
